--- a/index.html
+++ b/index.html
@@ -8,282 +8,16 @@
 <meta name="ROBOTS" content="NOODP" />
 <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon" />
 <link rel="icon" href="/media/favicon.ico" type="image/x-icon" />
+<link rel="stylesheet" href="css/game.css">
 
 
 
 
 
 
-
-	<style type="text/css">
-        body {
-	background-color:#088A08;
-	background-image: url(images/computer.jpg);
-	background-position: center;
-	background-repeat: no-repeat;	
-	height:100%;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	padding:100px 0 100px 0;
-}
-label {
-	display:block;
-	font-size:16px;
-}
-input, textarea, select {
-	display:block;
-	font-family: Arial, Verdana, Helvetica, sans-serif;
-	margin:auto;
-}
-
-textarea {
-	padding:5px;	
-}
-.clear {
-	clear:both;	
-}
-.hide {
-	display:none;	
-}
-
-.edit {
-	border:2px dashed #cccccc;
-	text-align:center;
-}
-
-.edit:hover, textarea.active {
-	border:2px inset gray;	
-}
-
-
-#title {
-	text-align:center;
-	font-size:36px;
-	margin:auto;
-	line-height:36px;
-}
-
-textarea#title {
-	height:50px;
-	width:90%;
-	color:#012b45;
-}
-
-#game {
-	width:100%;
-	background-color:#000000;
-	padding:0;
-	margin:0;
-	margin:auto;
-	font-size:16px;
-}
-
-#game textarea {
-	width:90%;
-	height:30px;
-	font-size:18px;
-	line-height:22px;
-}
-
-#game h3 {
-	color:#fff;
-	text-align:center;
-	font-size:20px;
-	font-weight:bold;
-}
-
-#game tbody td, #game thead th {
-	vertical-align: middle;
-	background-color:#088A08;
-	padding:5px;
-	text-align:center;
-	width:19%;
-	color:#ffff5f;
-	height:60px;
-	font-size:20px;
 	
-}
 
-#game tbody td {
-	cursor:pointer;
-	height:100px;
-    border:3px solid #2a3698;
-    background-image: url(images/sm-monitor.png);
-	background-position: center;
-	background-repeat: no-repeat;
-	
-}
-
-#game tbody td.ie-hack {
-	border:3px solid #ffff5f;
-}
-
-/*#game tbody td.clean:hover {
-	border:3px solid #ffff5f;
-}
-
-#game tbody td.dirty:hover {
-	border:3px solid #2a3698;
-}*/
-
-#game tbody td.dirty h3 {
-	color:#2a3698;	
-}
-
-#game tfoot td {
-	text-align: center;
-	background-color:#2a3698;
-}
-
-.submit {
-	margin:auto;
-}
-
-#modal {
-	display: none;
-	background-color:#fff;
-	padding:5px;
-	border:2px dashed #ccc;
-}
-
-#modal {
-	font-size:16px;
-	font-weight:bold;
-}
-
-#modal textarea {
-	width:500px;
-	height:120px;
-	font-size:16px;
-}
-
-#options {
-	/*label area*/
-	width:500px;
-	padding:10px;
-	margin:auto;
-	margin-top:75px;
-}
-
-#options h1 {
-	color:#088A08;
-	font-size:50px;
-	text-align:center;
-}
-
-#options label {
-	text-align: center;
-	font-size:20px;
-	color:#088A08;
-}
-
-#options select, #options label, #options input {
-	margin-top:5px;
-}
-
-#options select {
-	width:130px;	
-}
-
-#options input {
-	width:100px;	
-}
-#options p {
-	margin-bottom:0px;
-	color:#088A08;
-	font-weight: bold;	
-}
-
-.tip {
-	float:left;
-}
-
-.links {
-	float:right;
-}
-
-
-#stats {
-	position:fixed;
-	bottom:0;
-	background-color:#ffffff;
-	width:100%;
-	text-align:center;
-	height:110px;
-	display:none;
-	left:0;
-}
-
-#stats h3 {
-	margin:0;
-	padding:0;	
-}
-
-#stats input.team-name {
-    border:none;
-    font-size:18px;
-    font-weight:bold;
-    text-align:center;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    width:100%;
-    display:block;
-}
-
-#stats table {
-	margin:auto;
-}
-
-#stats table th {
-	border-bottom:1px solid black;
-}
-
-input.add-points {
-	color:#66cc33;
-	font-family:"Courier New", Courier, monospace;
-	font-weight:bold;
-	font-size:20px;
-	cursor:pointer;
-	padding:0px;
-	background-color:#ffffff;
-	border:none;
-	display:inline;
-}
-
-input.subtract-points {
-	color:#ff0000;
-	font-family:"Courier New", Courier, monospace;
-	font-weight:bold;
-	font-size:20px;
-	cursor:pointer;	
-	padding:0px;
-	background-color:#FFFFFF;
-	border:none;
-	display:inline;
-}
-
-#prompt {
-	display:none;
-	height:100%;
-	width:100%;
-	background-color:#2a3698;
-	color:#FFFFFF;
-	text-align:center;
-}
-
-#prompt a:link, #prompt a:visited, #prompt a:hover {
-	color:#fff;
-	font-size:18px;
-	text-decoration:underline;
-}
-
-#prompt a:hover {
-	text-decoration:none;
-}
-
-#simplemodal-overlay {
-	background-color:#000;
-}
-
-	</style>
+	<
 	<script type="text/javascript">
         /*
  * jQuery JavaScript Library v1.3.2
