--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <meta name="description" content=" Sports Jeopardy game" />
 <meta name="ROBOTS" content="NOODP" />
 <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon" />
-<link rel="icon" href="/media/favicon.ico" type="image/x-icon" />
-<link rel="stylesheet" href="css/sport.css">
+<link rel="stylesheet" href="css/sport.css"/>
 
 
 
