--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Sports Jeopardy</title>
-<meta name="description" content=" Sports Jeopardy game" />
+<meta name="description" content=" Jeopardy game" />
 <meta name="ROBOTS" content="NOODP" />
 <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="css/sport.css"/>
@@ -281,7 +281,7 @@
 </table>
 
 <div id="options">
-	<h1>Computer Parts</h1>
+	<h1>Jeopardy Game</h1>
 	<label>Number of Teams</label>
 	<select name="teams" id="teams">
 		<option value="1">1 team</option>		
