--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 	<thead>
 		<tr>
 		
-			<th>U.S</th>
+			<th>Point Guards</th>
 		
-			<th>NBA</th>
+			<th>Championships</th>
 		
-			<th>Black History</th>
+			<th>Records</th>
 		
-			<th>NFL</th>
+			<th>MVP</th>
 		
-			<th>Mystery???</th>
+			<th>Hall of Famers</th>
 		
 		</tr>		
 	</thead>
@@ -44,7 +44,7 @@
 						<td id="tq00" class="cell clean" onclick="prompt.show('q00', 100)">
 							<h3>100</h3>
 							<div class="hide">
-								<div id="q00">What is the Capital of Missouri?</div>
+								<div id="q00">Who is the point Guard that previously played for the HEAT , but got traded in 2016?</div>
 								<div id="aq00">Jefferson City</div>
 							</div>
 						</td>
