--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<thead>
 		<tr>
 		
-			<th>Point Guards</th>
+			<th>THE BEST</th>
 		
 			<th>Championships</th>
 		
@@ -32,7 +32,7 @@
 		
 			<th>MVP</th>
 		
-			<th>Hall of Famers</th>
+		
 		
 		</tr>		
 	</thead>
