--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Sports Jeopardy</title>
-<meta name="description" content=" Jeopardy game" />
+<meta name="description" content="Bulls Nation Game" />
 <meta name="ROBOTS" content="NOODP" />
 <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="css/sport.css"/>
