--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
 	
 
-	<
+	
 	
 <body>
-
+<header>
+<img scr="images/newteam.jpg" width="100%" height="243px" alt="Bulls">
 <table id="game" cellspacing="5" cellpadding="0" class="hide">
 	<thead>
 		<tr>
