--- a/index.html
+++ b/index.html
@@ -30,15 +30,9 @@
 		<option value="3">3 teams</option>
 		<option value="4">4 teams</option>
 		<option value="5">5 teams</option>
-		<option value="6">6 teams</option>
-		<option value="7">7 teams</option>
-		<option value="8">8 teams</option>
-		<option value="9">9 teams</option>
-		<option value="10">10 teams</option>	
-		<option value="11">11 teams</option>
-		<option value="12">12 teams</option>	
+			
 	</select>
-	<input class="submit" type="button" id="submit" value="Start" onclick="game.init()" />
+	<input class="submit" type="images/bullslogo.jpeg" alt="submit" width="100" height="100" id="submit" value="Start" onclick="game.init()" />
 	<p align="center">Press F11 for full-screen mode</p>
 	
 	<div class="clear"></div>
