--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
 	<td id="tq41" class="cell clean" onclick="prompt.show('q41', 500)">
 	<h3>500</h3>
 	<div class="hide">
-	<div id="q41">Who is Jim Plunkett</div>
-	<div id="aq41">He is only one of 4 players to win a Heisman Trophy and a Super Bowl</div>
+	<div id="q41">13</div>
+	<div id="aq41">How many NBA teams have "0" Championships? 2-6-13</div>
 	</div>
 	</td>
 					
