--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Raider Nation Jeopardy</title>
+<title>2016 NBA Jeopardy Game</title>
 <meta name="description" content="The History of The NBA" />
 <meta name="ROBOTS" content="NOODP" />
  <link rel="stylesheet" href="css/game.css">
@@ -14,8 +14,8 @@
 	
 	<img src="images/raider_banner.jpg" width="100%" height="243px" alt="Raiders">
 	<div id="options">
-	<h1>Oakland Raiders Jeopardy</h1>
-	<label>The Excellence Team</label>
+	<h1>2016 NBA Jeopardy</h1>
+	<label>NBA "Where greatness happens"</label>
 	<select name="teams" id="teams">
 		<option value="1">Team 1</option>		
 		<option value="2">Team 2</option>
@@ -73,8 +73,8 @@
 	<td id="tq02" class="cell clean" onclick="prompt.show('q02', 100)">
 	<h3>100</h3>
 	<div class="hide">
-	<div id="q02">Who is Marcus Allen</div>
-	<div id="aq02">Jim plunket and this player both have a Heisman Trophy and 2 Super Bowl championships</div>
+	<div id="q02">Who is John Stockton</div>
+	<div id="aq02">All-time regular season assist leader</div>
 	</div>
 	</td>
 					
@@ -115,8 +115,8 @@
 	<td id="tq12" class="cell clean" onclick="prompt.show('q12', 200)">
 	<h3>200</h3>
 	<div class="hide">
-	<div id="q12">Who is Tim Brown</div>
-	<div id="aq12">He has the most recieving yards and recieving touchdowns</div>
+	<div id="q12">Who is Kareem Abdul-Jabbar</div>
+	<div id="aq12">He is the All-time regular season scoring leader and its not MJ</div>
 	</div>
 	</td>
 					
