--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>1946-2016 NBA Jeopardy Game</title>
 <meta name="description" content="The History of The NBA" />
 <meta name="ROBOTS" content="NOODP" />
- <link rel="stylesheet" href="css/sport.css">
+ <link rel="stylesheet" href="game/sport.css">
 </head>
 
 <body>
