--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <title>1946-2016 NBA Jeopardy Game</title>
 <meta name="description" content="The History of The NBA" />
 <meta name="ROBOTS" content="NOODP" />
- <link rel="stylesheet" href="game/sport.css">
+ <link rel="stylesheet" href="game/css/sport.css">
 </head>
 
 <body>
 <header>
 	
-	<img src="images/legends.jpg" width="100%" height="243px" alt="Legends">
+	<img src="images/legend.jpg" width="100%" height="243px" alt="Legends">
 	<div id="options">
 	<h1>1946-2016 NBA Jeopardy</h1>
 	<label>NBA "Where greatness happens"</label>
