--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 	<td id="tq04" class="cell clean" onclick="prompt.show('q04', 100)">
 	<h3>100</h3>
 	<div class="hide">
-	<div id="q04">Who is Daryll Lamonica</div>
-	<div id="aq04">He is known as the Mad Bomber</div>
+	<div id="q04">Rockets</div>
+	<div id="aq04">What team did Hall of Famer Yoa Ming play for?</div>
 	</div>
 	</td>
 	</tr>
@@ -131,8 +131,8 @@
 	<td id="tq14" class="cell clean" onclick="prompt.show('q14', 200)">
 	<h3>200</h3>
 	<div class="hide">
-	<div id="q14">Who is Art Shell</div>
-	<div id="aq14">He is a Hall of Fame, All-Pro line and former head coach</div>
+	<div id="q14">massachusetts</div>
+	<div id="aq14">What state is the NBA Hall of Fame located?</div>
 	</div>
 	</td>
 	</tr>
@@ -173,8 +173,8 @@
 	<td id="tq24" class="cell clean" onclick="prompt.show('q24', 300)">
 	<h3>300</h3>
 	<div class="hide">
-        <div id="q24">Who is Fred Bilentnikoff</div>
-	<div id="aq24">He is considered on of the greatest sure handed recievers ever</div>
+        <div id="q24">False</div>
+	<div id="aq24">Allen Iverson is not in the Hall of Fame.(True-False)</div>
 	</div>
 	</td>
 					
@@ -216,8 +216,8 @@
 	<td id="tq34" class="cell clean" onclick="prompt.show('q34', 400)">
 	<h3>400</h3>
 	<div class="hide">
-	<div id="q34">Who is Jim Plunkett</div>
-	<div id="aq34">He has a Heisman Trophy, and 2 Super Bowl victories and is "NOT" a Hall of Famer</div>
+	<div id="q34">Who is James Naismith </div>
+	<div id="aq34">Who was the very first Hall of Famers in the NBA?</div>
 	</div>
 	</td>
 	</tr>
@@ -258,8 +258,8 @@
 	<td id="tq44" class="cell clean" onclick="prompt.show('q44', 500)">
 	<h3>500</h3>
 	<div class="hide">
-	<div id="q44">Who is Ray Guy</div>
-	<div id="aq44">He is the original hanging punter</div>
+	<div id="q44">June</div>
+	<div id="aq44">In what month was the NBA founded?</div>
 	</div>
 	</td>
 	</tr>
