--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			
 		
 	</select>
-<input class="submit" type="image" src="images/" alt="Submit" width="100" height="100" id="submit" value="Start" onclick="game.init()" />
+<input class="submit" type="image" src="images/mj.jpg" alt="submit" width="100" height="100" id="submit" value="Start" onclick="game.init()" />
 		
 	
 		
