--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 	
-	<img src="images/legend.jpg" width="100%" height="243px" alt="Legends">
+	<img src="images/howard.jpg" width="100%" height="243px" alt="howard">
 	<div id="options">
 	<h1>1946-2016 NBA Jeopardy</h1>
 	<label>NBA "Where greatness happens"</label>
