--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			
 		
 	</select>
-<input class="submit" type="image" src="images/nba.jpg" alt="submit" width="200" height="120" id="submit" value="Start" onclick="game.init()" />
+<input class="submit" type="image" src="images/nba.png" alt="submit" width="200" height="120" id="submit" value="Start" onclick="game.init()" />
 		
 	
 		
