--- a/st-louis.html
+++ b/st-louis.html
@@ -21,8 +21,8 @@
 		<li><a href="raiders.html">Raiders</a></li>
 		<li><a href="lakers.html">Lakers</a></li>
 		<li><a href="cardinals.html">Cardinals</a></li>
+		<li><a href="st-louis.html">St.louis</a></li>
 		<li><a href="blues.html">Blues</a></li>
-		
 	</ul>
 	
 </div>	
