--- a/st-louis.html
+++ b/st-louis.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>St louis High lights</title>
-<meta name="description" content="Superman, Batman, Aquaman, Wonderwoman, Flash, Martian Manhunter, Green Lantern" />
+<meta name="description" content="Attractive " />
 <meta name="ROBOTS" content="NOODP" />
 <link rel="stylesheet" href="css/stl.css"/>
 
