--- a/st-louis.html
+++ b/st-louis.html
@@ -13,7 +13,7 @@
 
 <body>
 	<header>
-	<img src="images/banner1.jpg" width="100%" height="243px" alt="JLA">	
+	<img src="images/stlbackground.jpg" width="100%" height="243px" alt="JLA">	
 	<div id="navigation">
 	
 	<ul>
