--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 <header>
 	
 	<img src="images/nbab.png" width="100%" height="243px" alt="howard">
+	<div id="navigation">
+	
+	<ul>
+		<li class="active"><a href="index.html">Home</a></li>
+		<li><a href="lakers.html">Lakers</a></li>
+		<li><a href="cardinals.html">Cardinals</a></li>
+		<li><a href="st-louis.html">St. Louis</a></li>
+	</ul>
+	
+</div>	
+	
+	
 	<div id="options">
 	<h1>1946-2016 NBA Jeopardy</h1>
 	<label>NBA "Where greatness happens"</label>
