--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 	
 	<ul>
 		<li class="active"><a href="index.html">Home</a></li>
-		<li><a href="lakers.html">Lakers</a></li>
-		<li><a href="cardinals.html">Cardinals</a></li>
+		<li><a href="cardinals.html">Cardinals</a>
 		<li><a href="st-louis.html">St. Louis</a></li>
 	</ul>
 	
