--- a/st-louis.html
+++ b/st-louis.html
@@ -28,8 +28,8 @@
 	
 	
 	<div id="options">
-	<h1>The Justice League</h1>
-	<label>The Super Team</label>
+	<h1>St.louis </h1>
+	<label>The Super City</label>
 	<select name="teams" id="teams">
 		<option value="1">1 team</option>		
 		<option value="2">2 teams</option>
@@ -48,15 +48,15 @@
 
 	<tr>
 		
-			<th>Original 7</th>
+			<th>Cardinals</th>
 		
-			<th>The Hideout</th>
+			<th>Blues</th>
 		
-			<th>Villians</th>
+			<th>History</th>
 		
-			<th>Nemesis</th>
+			<th>St.louis Art</th>
 		
-			<th>Girl Power</th>
+			<th>Wild Cards</th>
 		
 		</tr>		
 
