--- a/st-louis.html
+++ b/st-louis.html
@@ -37,7 +37,7 @@
 		<option value="4">4 teams</option>
 		<option value="5">5 teams</option>
 		</select>
-<input class="submit" type="image" src="images/sm-league.jpg" alt="Submit" width="200" height="120" id="submit" value="Start" onclick="game.init()" />
+<input class="submit" type="image" src="images/stlflag.png" alt="Submit" width="200" height="120" id="submit" value="Start" onclick="game.init()" />
 	<p align="center">Press F11 for full-screen mode</p>
 	
 	<div class="clear"></div>
