--- a/st-louis.html
+++ b/st-louis.html
@@ -72,8 +72,8 @@
 <td id="tq00" class="cell clean" onclick="prompt.show('q00', 100)">
 <h3>100</h3>
 <div class="hide">
-<div id="q00"><img src="images/cyborg.jpg" width="500px" height="300px"><br><br>Who is Cyborg</div>
-<div id="aq00">Of the Justice League Members Pictured who is "Not" an original member of the League.</div>
+<div id="q00"><img src="images/cyborg.jpg" width="500px" height="300px"><br><br>1882</div>
+<div id="aq00">In what year was the St.louis Cardinals Founded</div>
 							</div>
 						</td>
 					
@@ -127,8 +127,8 @@
 						<td id="tq10" class="cell clean" onclick="prompt.show('q10', 200)">
 							<h3>200</h3>
 							<div class="hide">
-								<div id="q10">What is food</div>
-								<div id="aq10"><img src="images/flash.jpg" width="500px" height="300px"><br><br>The Flash has a high metabolism, what does he need to maintain his speed?</div>
+								<div id="q10">11</div>
+								<div id="aq10"><img src="images/flash.jpg" width="500px" height="300px"><br><br>How many Championships has the St.louis Cardinals won, as of 2016? (5-7-11)</div>
 							</div>
 						</td>
 					
