--- a/st-louis.html
+++ b/st-louis.html
@@ -181,8 +181,8 @@
 						<td id="tq20" class="cell clean" onclick="prompt.show('q20', 300)">
 							<h3>300</h3>
 							<div class="hide">
-								<div id="q20"><img src="images/wonder.jpg" width="500px" height="300px"><br><br>Who is Wonder Woman</div>
-								<div id="aq20">She spends her day working as an administrative assistant to Colonel Steve Treavor</div>
+								<div id="q20"><img src="images/wonder.jpg" width="500px" height="300px"><br><br>5</div>
+								<div id="aq20">What number did Albert Pujols wear when he was a cardinal?</div>
 							</div>
 						</td>
 					
@@ -235,8 +235,8 @@
 						<td id="tq30" class="cell clean" onclick="prompt.show('q30', 400)">
 							<h3>400</h3>
 							<div class="hide">
-								<div id="q30"><img src="images/aquaMan.jpg" width="500px" height="300px"><br><br>Who is Aquaman</div>
-								<div id="aq30">He can communicate with aquadic life</div>
+								<div id="q30"><img src="images/aquaMan.jpg" width="500px" height="300px"><br><br>Who is  Tony La Russa</div>
+								<div id="aq30">Cardinals Manager in 2010</div>
 							</div>
 						</td>
 					
