--- a/st-louis.html
+++ b/st-louis.html
@@ -92,7 +92,7 @@
 							<h3>100</h3>
 							<div class="hide">
 								<div id="q02"><img src="images/metallo.jpg" width="500px" height="300px"><br><br>Midwest</div>
-								<div id="aq02">Is St.ouis in the West coast, East coast, or mid-west</div>
+								<div id="aq02">Is St.Louis in the West coast, East coast, or mid-west</div>
 							</div>
 						</td>
 					
@@ -145,8 +145,8 @@
 						<td id="tq12" class="cell clean" onclick="prompt.show('q12', 200)">
 							<h3>200</h3>
 							<div class="hide">
-								<div id="q12"><img src="images/villian1.jpg" width="500px" height="300px"><br><br>Who is Lex Luthor</div>
-								<div id="aq12">Supermans smartest human enemy</div>
+								<div id="q12"><img src="images/villian1.jpg" width="500px" height="300px"><br><br>Dred Scott Case</div>
+								<div id="aq12">What famous cilvil right case took place in St.louis in 1857 for freedom</div>
 							</div>
 						</td>
 					
