--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
 <div id="prompt">
 	<h2 id="answer"></h2>
-	<p><span id="correct-response"><a href="javascript:prompt.showQuestion()"><img src="images/response_btn.jpg" width="120px" alt="Response"></a> <img src="images/nbaring.jpg" width="120px" alt="Rings"></span><a href="javascript:prompt.hide()"><img src="images/next.png" width="120px" alt="Continue"></a></p>
+	<p><span id="correct-response"><a href="javascript:prompt.showQuestion()"><img src="images/answer.jpg" width="120px" alt="Response"></a> <img src="images/nbaring.jpg" width="120px" alt="Rings"></span><a href="javascript:prompt.hide()"><img src="images/next.png" width="120px" alt="Continue"></a></p>
 	<h2 id="question"></h2>
 </div>
 
