--- a/st-louis.html
+++ b/st-louis.html
@@ -338,7 +338,7 @@
 <div id="prompt">
 	<h2 id="answer"></h2>
 	<p><span id="correct-response"><a href="javascript:prompt.showQuestion()"><img src="images/answer.jpg" width="216px" height="41px"></a><img src="images/stl.jpg" width="350px" height="120px">
-	 <a href="javascript:prompt.hide()"><img src="images/next.jpg" width="131px" height="41px"></a></span></p>
+	 <a href="javascript:prompt.hide()"><img src="images/next.png" width="131px" height="41px"></a></span></p>
 	<h2 id="question"></h2>
 </div>
 
