--- a/st-louis.html
+++ b/st-louis.html
@@ -337,7 +337,7 @@
 <div id="stats"></div>
 <div id="prompt">
 	<h2 id="answer"></h2>
-	<p><span id="correct-response"><a href="javascript:prompt.showQuestion()"><img src="images/answer.jpg" width="216px" height="41px"></a><img src="images/stl.jpg" width="350px" height="120px">
+	<p><span id="correct-response"><a href="javascript:prompt.showQuestion()"><img src="images/answer.jpg" width="216px" height="41px"></a><img src="images/stl.png" width="350px" height="120px">
 	 <a href="javascript:prompt.hide()"><img src="images/next.png" width="131px" height="41px"></a></span></p>
 	<h2 id="question"></h2>
 </div>
