--- a/st-louis.html
+++ b/st-louis.html
@@ -91,7 +91,7 @@
 						<td id="tq02" class="cell clean" onclick="prompt.show('q02', 100)">
 							<h3>100</h3>
 							<div class="hide">
-								<div id="q02"><img src="images/metallo.jpg" width="500px" height="300px"><br><br>Midwest</div>
+								<div id="q02"><img src="images/midwest.png" width="500px" height="300px"><br><br>Midwest</div>
 								<div id="aq02">Is St.Louis in the West coast, East coast, or mid-west</div>
 							</div>
 						</td>
