--- a/st-louis.html
+++ b/st-louis.html
@@ -273,8 +273,8 @@
 						<td id="tq34" class="cell clean" onclick="prompt.show('q34', 400)">
 							<h3>400</h3>
 							<div class="hide">
-								<div id="q34">What is a tower</div>
-						<div id="aq34"><img src="images/tower.jpg" width="500px" height="300px"></div>
+								<div id="q34">What is St.louis current population? 250,000/320,000/360,000</div>
+						<div id="aq34">Apx. 320,000</div>
 							</div>
 						</td>
 					
@@ -328,8 +328,8 @@
 						<td id="tq44" class="cell clean" onclick="prompt.show('q44', 500)">
 							<h3>500</h3>
 							<div class="hide">
-								<div id="q44">What is multiplication</div>
-					<div id="aq44"><img src="images/powersupply.jpg" width="500px" height="300px"></div>
+								<div id="q44">What is the first st.louis NBA team</div>
+					<div id="aq44">St. Louis Hawks</div>
 							</div>
 						</td>
 			</tr></table>
