--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<div id="navigation">
 	
 	<ul>
-		<li class="active"><a href="index.html">Home</a></li>
-		<li><a href="cardinals.html">Cardinals</a>
+		<li class="active"><a href="index.html">NBA</a></li>
+		
 		<li><a href="st-louis.html">St. Louis</a></li>
 	</ul>
 	
