--- a/st-louis.html
+++ b/st-louis.html
@@ -111,8 +111,8 @@
 						<td id="tq04" class="cell clean" onclick="prompt.show('q04', 100)">
 							<h3>100</h3>
 							<div class="hide">
-				<div id="q04"></div>
-						<div id="aq04"><img src="images/nelly.jpg" width="500px" height="300px"><br><br>>Who was the leading rapper of the St.louis lunatics?</div>
+				<div id="q04">Nelly</div>
+						<div id="aq04"><br><br>Who was the leading rapper of the St.louis lunatics?</div>
 							</div>
 						</td>
 					
@@ -253,8 +253,8 @@
 						<td id="tq32" class="cell clean" onclick="prompt.show('q32', 400)">
 							<h3>400</h3>
 							<div class="hide">
-								<div id="q32">What is a USB cable</div>
-								<div id="aq32">Connects printers to a computer</div>
+								<div id="q32">True</div>
+								<div id="aq32">Lewis and Clark came threw st.louis. (True/False)</div>
 							</div>
 						</td>
 					
